objects/ssot__Ad__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AdCreativeBaseURL__c</fullName>
        <label>Ad Creative Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeCallToActionOption1Text__c</fullName>
        <label>Ad Creative Call To Action Option 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeCallToActionOption2Text__c</fullName>
        <label>Ad Creative Call To Action Option 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeCallToActionOption3Text__c</fullName>
        <label>Ad Creative Call To Action Option 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeClickUrl__c</fullName>
        <label>Ad Creative Click Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeImageName__c</fullName>
        <label>Ad Creative Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeImage__c</fullName>
        <label>Ad Creative Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeSizeText__c</fullName>
        <label>Ad Creative Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeStatus__c</fullName>
        <label>Ad Creative Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeStrength__c</fullName>
        <label>Ad Creative Strength</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeTextOption2Text__c</fullName>
        <label>Ad Creative Text Option 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeTextOption3Text__c</fullName>
        <label>Ad Creative Text Option 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeText__c</fullName>
        <label>Ad Creative Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeTitleName__c</fullName>
        <label>Ad Creative Title Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeTitleOption2Name__c</fullName>
        <label>Ad Creative Title Name Option 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeTitleOption3Name__c</fullName>
        <label>Ad Creative Title Name Option 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeType__c</fullName>
        <label>Ad Creative Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeUrlSuffixText__c</fullName>
        <label>Ad Creative Url Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdCreativeUrl__c</fullName>
        <label>Ad Creative Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdFormat__c</fullName>
        <label>Ad Format</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdGroup__c</fullName>
        <label>Ad Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdHeadlineOption2Text__c</fullName>
        <label>Ad Headline Option 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdHeadlineOption3Text__c</fullName>
        <label>Ad Headline Option 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdPath1Text__c</fullName>
        <label>Ad Path 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AdPath2Text__c</fullName>
        <label>Ad Path 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConceptText__c</fullName>
        <label>Concept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HeadlineText__c</fullName>
        <label>Headline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Ad Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAdCategoryName__c</fullName>
        <label>Primary Ad Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAdCreativeId__c</fullName>
        <label>Primary Ad Creative Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>